core/interpreter/src/test/resources/Interpreter_PP_Classes_TestSuite_External/PP/error/inheritance/rep/reperr-22.vpp.entry
new A().Test() -- = Run-Time Error 282: Static member is not in scope